sub-comment: Fix broken quote style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3091,6 +3091,13 @@ label.inline-list {
                         a.issueLink {
                             color: #0e90d2;
                         }
+
+                        blockquote {
+                            margin-bottom: 10px;
+                            p {
+                                font-size: 1em;
+                            }
+                        }
                     }
                     .author {
                         text-align: right;
