subtle: Show a little more, made by logo

--- a/app/views/layout_framed.scala.html
+++ b/app/views/layout_framed.scala.html
@@ -62,7 +62,7 @@
         @if(!currentUser.isAnonymous){
             @sidebar()
         }
-    <div id="sidebar-bottom" class="sidebar-bottom hide" style="
+    <div id="sidebar-bottom" class="sidebar-bottom" style="
         position: absolute;
         bottom: 8px;
         right: 15px;
