sidebar: Fix page location bug when to close

--- a/app/views/sidebar.scala.html
+++ b/app/views/sidebar.scala.html
@@ -105,7 +105,7 @@
              // sidebar pin click
              $(".pin-in-sidebar").on("click", function () {
                  localStorage.setItem('shallWeOpenLeftNavigation', "false");
-                 window.location =  document.getElementById("mainFrameId").src;
+                 window.location = window.location.href;
              });
 
          })
