issue: Introduce draft save feature

--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -37,7 +37,7 @@
         </li>
         <li>
             <div class="editor-clear-temporary">
-                <div class="editor-clear-temporary-button"><button type="button" class="ybtn ybtn-small ybtn-warning">@Messages("button.clear.temporary")</button></div>
+                <div class="editor-clear-temporary-button"><button type="button" id="button-clear-temporary" class="ybtn ybtn-small ybtn-warning">@Messages("button.clear.temporary")</button></div>
             </div>
         </li>
         <li>
