--- a/app/views/issue/partial_list_draft.scala.html
+++ b/app/views/issue/partial_list_draft.scala.html
@@ -5,7 +5,7 @@
 * https://yona.io
 **@
 @import models.support.SearchCondition
-@(project:Project, issueList:Collection[Issue], searchCondition:SearchCondition, pageIndex:Int, totalPageCount:Int)
+@(project:Project, issueList:Collection[Issue])
 
 @import java.util
 @import utils.JodaDateUtil
