--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7950,3 +7950,14 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         color: #03a9f4;
     }
 }
+
+.draft {
+    border-radius: 3px;
+    padding: 2px 4px;
+    background: crimson;
+    color: white;
+}
+
+.draft-save-btn {
+    margin-right: 30px;
+}
