--- a/app/views/issue/partial_list_wrap.scala.html
+++ b/app/views/issue/partial_list_wrap.scala.html
@@ -81,6 +81,9 @@
                 }
             </div>
 
+            @if(currentPage.getPageIndex == 0 && !param.hasCondition && param.state != State.CLOSED) {
+                @partial_list_draft(project, IssueApp.findDraftIssues(project.owner, project.name))
+            }
             @partial_list(project, currentPage.getList, param, currentPage.getPageIndex, currentPage.getTotalPageCount)
 
             <div class="pull-left" style="padding:10px;">
