--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -143,9 +143,15 @@
 
         yobi.OriginalMessage.hide($("[data-via-email]"));
 
-        $('.logo, .title > a, .project-menu-nav > li > a, .show-progress-bar, .project-breadcrumb > span > a, .project-name > a, a[class="title"]').on('click.progressbar', function(){
+        $('.logo, .title > a, .project-menu-nav > li > a, .show-progress-bar, .project-breadcrumb > span > a, .project-name > a, a[class="title"]').on('click.progressbar', function () {
             NProgress.set(0.7);
             NProgress.start();
+        });
+
+        window.addEventListener('pageshow', (event) => {
+            if (event.persisted) {
+                NProgress.done();
+            }
         });
 
         // judge whether contents link is internal or external
