--- a/app/views/issue/partial_view_childIssueList.scala.html
+++ b/app/views/issue/partial_view_childIssueList.scala.html
@@ -4,46 +4,52 @@
 * Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
 * https://yona.io
 **@
+@(issue: Issue, project: Project)
 
-@(issue:Issue, project:Project)
+    @import utils.TemplateHelper._
 
-@import utils.TemplateHelper._
-
-@parentIssueId = @{
-    if(issue.parent == null) {
-        issue.id
-    } else {
-        issue.parent.id
+    @parentIssueId = @{
+        if(issue.parent == null) {
+            issue.id
+        } else {
+            issue.parent.id
+        }
     }
-}
 
-@defining(Issue.findByParentIssueIdAndState(parentIssueId, State.OPEN)) { openChildIssues =>
-    @defining(Issue.findByParentIssueIdAndState(parentIssueId, State.CLOSED)) { closedChildIssues =>
-        @if(!openChildIssues.isEmpty || !closedChildIssues.isEmpty) {
-            <div class="child-issues">
-                @defining(Issue.finder.byId(parentIssueId)) { parentIssue =>
-                    <div class="issue-item parent-issue"><a href="@routes.IssueApp.issue(parentIssue.project.owner, parentIssue.project.name, parentIssue.getNumber)" class="@if(parentIssue.id == issue.id){bold}">#@parentIssue.getNumber @parentIssue.title @if(parentIssue.assignee != null) {- @parentIssue.assignee.user.getPureNameOnly}</a>
-                        @defining(getPercent(closedChildIssues.size.toDouble, (openChildIssues.size + closedChildIssues.size).toDouble)) { percentage =>
-                            <div class="upload-progress @if(percentage == 100){done-outline} else {red-outline}">
-                                <div class="bar @if(percentage == 100){done} else {red}" style="width: @percentage%;" title="Subtask"></div>
-                            </div>
-                            <span class="@if(percentage == 100){txt-green}">@if(percentage != 100){@closedChildIssues.size/}@(openChildIssues.size + closedChildIssues.size)</span>
-                            <span class="parent-issue-state @parentIssue.state.state">@Messages("issue.state." + parentIssue.state.state)</span>
+@defining(Issue.findByParentIssueIdAndState(parentIssueId, State.DRAFT)) { draftChildIssues =>
+    @defining(Issue.findByParentIssueIdAndState(parentIssueId, State.OPEN)) { openChildIssues =>
+        @defining(Issue.findByParentIssueIdAndState(parentIssueId, State.CLOSED)) { closedChildIssues =>
+            @if(!openChildIssues.isEmpty || !closedChildIssues.isEmpty || (!draftChildIssues.isEmpty && issue.isDraft && issue.isAuthoredBy(UserApp.currentUser()))) {
+                <div class="child-issues">
+                    @defining(Issue.finder.byId(parentIssueId)) { parentIssue =>
+                        <div class="issue-item parent-issue"><a href="@routes.IssueApp.issue(parentIssue.project.owner, parentIssue.project.name, parentIssue.getNumber)" class="@if(parentIssue.id == issue.id) {bold}">
+                            #@parentIssue.getNumber @parentIssue.title @if(parentIssue.assignee != null) {- @parentIssue.assignee.user.getPureNameOnly}</a>
+                            @defining(getPercent(closedChildIssues.size.toDouble, (openChildIssues.size + closedChildIssues.size).toDouble)) { percentage =>
+                                <div class="upload-progress @if(percentage == 100) {done-outline} else {red-outline}">
+                                    <div class="bar @if(percentage == 100) {done} else {red}" style="width: @percentage%;" title="Subtask"></div>
+                                    </div>
+                                    <span class=" @if(percentage == 100) {txt-green}
+                                    ">@if(percentage != 100) {@closedChildIssues.size/}@(openChildIssues.size + closedChildIssues.size) </span>
+                                        <span class="parent-issue-state @parentIssue.state.state">@Messages("issue.state." + parentIssue.state.state)</span>
+                                    </div>
+                            }
+                    }
+                    <hr class="parent-issue-delimeter"/>
+                    @if(!openChildIssues.isEmpty || !closedChildIssues.isEmpty || (!draftChildIssues.isEmpty && issue.isDraft && issue.isAuthoredBy(UserApp.currentUser()))) {
+                        <div class="child-issues">
+                            @for(childIssue <- draftChildIssues) {
+                                @partial_view_child("draft", childIssue, issue)
+                            }
+                            @for(childIssue <- openChildIssues) {
+                                @partial_view_child("open", childIssue, issue)
+                            }
+                            @for(childIssue <- closedChildIssues) {
+                                @partial_view_child("closed", childIssue, issue)
+                            }
                         </div>
                     }
-                }
-                <hr class="parent-issue-delimeter"/>
-                @if(!openChildIssues.isEmpty || !closedChildIssues.isEmpty) {
-                    <div class="child-issues">
-                        @for(childIssue <- openChildIssues) {
-                            @partial_view_child("open", childIssue, issue)
-                        }
-                        @for(childIssue <- closedChildIssues) {
-                            @partial_view_child("closed", childIssue, issue)
-                        }
-                    </div>
-                }
-            </div>
+                </div>
+            }
         }
     }
 }
