issue: Tune feature, draft issue

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7951,11 +7951,16 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 }
 
+.draft-number {
+    color: #0bb53c;
+}
+
 .draft {
     border-radius: 3px;
     padding: 2px 4px;
-    background: crimson;
-    color: white;
+    background: #0bb53c;
+    color: ghostwhite;
+    font-size: 0.9em;
 }
 
 .draft-save-btn {
