issue: Change save draft button position & add confirm window

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7963,6 +7963,4 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     font-size: 0.9em;
 }
 
-.draft-save-btn {
-    margin-right: 30px;
-}
+.draft-save-btn {}
