--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -82,8 +82,8 @@
                     @** end of fileUploader **@
 
                     <div class="actrow right-txt">
-                        <button type="button" id="draft-save-btn" class="ybtn ybtn-watching draft-save-btn">@Messages("button.draft.save")</button>
-                        <button type="submit" id="button-save" class="ybtn ybtn-success">@Messages("button.save")</button><!--
+                        <button type="submit" id="button-save" class="ybtn ybtn-success">@Messages("button.save")</button>
+                        <button type="button" id="draft-save-btn" class="ybtn ybtn-watching draft-save-btn">@Messages("button.draft.save")</button><!--
                      --><a href="javascript:history.back();" class="ybtn">@Messages("button.cancel")</a>
                     </div>
                 </div>
