--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -85,10 +85,10 @@
                         </span>
                         }
                         @if(isAllowed(UserApp.currentUser(), issue.asResource(), Operation.UPDATE) && issue.isDraft) {
-                            <button type="button" id="draft-save-btn" class="ybtn ybtn-watching draft-save-btn">@Messages("button.draft.save")</button>
                             <button type="submit" id="button-draft-publish" class="ybtn ybtn-info">@Messages("button.draft.publish")</button>
+                            <button type="button" id="draft-save-btn" class="ybtn ybtn-watching draft-save-btn">@Messages("button.draft.save")</button><!--
                         }
-                        @if(isAllowed(UserApp.currentUser(), issue.asResource(), Operation.UPDATE) && !issue.isDraft) {
+                    -->@if(isAllowed(UserApp.currentUser(), issue.asResource(), Operation.UPDATE) && !issue.isDraft) {
                             <button type="submit" id="button-save" class="ybtn ybtn-info">@Messages("button.save")</button>}<!--
                      --><a href="javascript:history.back();" class="ybtn">@Messages("button.cancel")</a>
                     </div>
@@ -262,7 +262,10 @@
             $('#issue-form').submit();
         });
 
-        $('#button-draft-publish').on('click', function(){
+        $('#button-draft-publish').on('click', function(event){
+            event.preventDefault();
+            if (!confirm('@Messages("button.draft.publish.description")')) return false;
+            
             var $this = $(this);
             $this.prop('disabled', true);
             setTimeout(function (){
